<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.SearchActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:gravity="top"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_menu"
                android:tint="@color/colorAccent" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/search_bg" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_shopping_cart"
                android:tint="@color/colorAccent" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_baseline_place"
            android:drawableLeft="@drawable/ic_baseline_place"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right"
            android:drawablePadding="8dp"
            android:text="@string/direction"
            android:textSize="7pt" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/search_failed"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_baseline_search"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <TextView
                android:gravity="center"
                android:text="@string/not_found_title"
                android:textSize="8pt"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:textSize="6pt"
                android:text="@string/not_found_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        


        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/resultsRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>



</LinearLayout>